# racingoptimizer

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  BMWBounds.md  CLAUDE.md  Cadillacbounds.md  Cadillachints.md  Ferraribounds.md  GETTING_STARTED.md  Porschebounds.md  README.md  VISION.md  _status.txt  _status_filtered.txt  categorize_13.py  constraints.md  pyproject.toml  status.md  telemetry_discovery.py
.claude/: settings.json
aero-maps/: acura_wing_10.0.json  acura_wing_6.0.json  acura_wing_6.5.json  acura_wing_7.0.json  acura_wing_7.5.json  acura_wing_8.0.json  acura_wing_8.5.json  acura_wing_9.0.json  acura_wing_9.5.json  bmw_wing_12.0.json  bmw_wing_13.0.json  bmw_wing_14.0.json  bmw_wing_15.0.json  bmw_wing_16.0.json  bmw_wing_17.0.json  cadillac_wing_12.0.json  cadillac_wing_13.0.json  cadillac_wing_14.0.json  cadillac_wing_15.0.json  cadillac_wing_16.0.json  cadillac_wing_17.0.json  ferrari_wing_12.0.json  ferrari_wing_13.0.json  ferrari_wing_14.0.json  ferrari_wing_15.0.json  ferrari_wing_16.0.json  ferrari_wing_17.0.json  porsche_wing_12.0.json  porsche_wing_13.0.json  porsche_wing_14.0.json  porsche_wing_15.0.json  porsche_wing_16.0.json  porsche_wing_17.0.json
docs/: PARAMETER_VALIDATION.md  VISION_ADHERENCE_REPORT.md  VISION_COMPLIANCE.md  watkins-glen-runbook.md
ibtfiles/: 12.ibt  2ndracebmw.ibt  acuraarx06gtp_belleisle 2026-05-24 07-42-30.ibt  acuraarx06gtp_belleisle 2026-05-24 08-09-46.ibt  acuraarx06gtp_belleisle 2026-05-24 10-09-08.ibt  acuraarx06gtp_belleisle 2026-05-24 10-25-41.ibt  af.ibt  badbmw.ibt  badbmw2.ibt  (+187 more)
(+514 files in other folders)
