[project]
name = "racingoptimizer"
version = "0.0.1"
description = "Physics-based setup optimizer for iRacing GTP cars"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/racingoptimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
