[project]
name = "racingoptimizer"
version = "0.0.1"
description = "Physics-based setup optimizer for iRacing GTP cars"
requires-python = ">=3.12"
dependencies = [
    "pyirsdk>=1.3.5",
    "polars>=1.0",
    "pyarrow>=16.0",
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
optimize = "racingoptimizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/racingoptimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
